--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 HTML  {
-    background: url(../img/203514.jpg) no-repeat center center fixed;
+    background: url(https://i.ibb.co/SxpmBDM/203514.jpg) no-repeat center center fixed;
     background-size: cover;
 
     Font-size: 62.5% 
