--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,7 @@
     box-sizing: border-box;
 }
 
-HTML  {
-    background: url(../img/203514.jpg) no-repeat center center fixed;
-    background-size: cover;
 
-    Font-size: 62.5% 
-    
-}
     
 a { text-decoration: none;}
 
@@ -42,6 +36,7 @@ a { text-decoration: none;}
      display: grid;
      justify-content: space-between;
      align-items: center;
+     font-size: 3rem;
  }
 
 
@@ -275,12 +270,13 @@ ul.intergrid_list {
     
     .intergrid_sub {
         padding-top: 100px;
+        margin-left: 80px;
     }
     
     .intergrid_sub_map {
 
         border-radius: 25px;
-        width: 150px;
+        width: 300px;
         height: 200px;
         margin-left: 2rem;
 
@@ -347,6 +343,7 @@ ul.intergrid_list {
         list-style-type: disc;
         list-style-position: inside;
         padding-top: 50px;
+        margin-bottom: 30px;
         color: antiquewhite;
     }
 
@@ -356,12 +353,13 @@ ul.intergrid_list {
     
     .intergrid_sub {
         padding-top: 100px;
+        margin-left: 20px;
     }
     
     .intergrid_sub_map {
 
         border-radius: 25px;
-        width: 150px;
+        width: 300px;
         height: 200px;
         margin-left: 2rem;
 
@@ -379,9 +377,7 @@ ul.intergrid_list {
     @media  screen and (max-width:1000px){
 
         .grid {
-            display: grid;
-            grid-template-columns: 350px ;
-            grid-template-rows: 300px ;
+            display: block;
             padding-top: 150px;
             padding-bottom: 150px;
         }
@@ -404,4 +400,43 @@ ul.intergrid_list {
             border: 10px solid #379683;
             justify-content: center;
         }
+
+        .intergrid {
+            font-size: 3rem;
+        }
+        .intergrid_sub {
+            padding-top: 100px;
+            margin-left: 2rem;
+        }
+}
+
+HTML  {
+    
+    background: url(https://ibb.co/199n3zw) no-repeat center center fixed;
+    background-size: cover;
+
+    Font-size: 62.5% 
+    !important
+} 
+
+.navbar { 
+    background:url(../img/arbol.png);
+   
+}
+
+.container-fluid {
+    color: aliceblue;
+
+}
+.nav-item{
+    margin-right: 30px;
+}
+.nav-item:hover {
+    background-color: #379683;
+    color: white;
+    transition:all .3s;   
+  }
+
+.cuerpo {
+    background: url(../img/203514.jpg) no-repeat center center fixed;
 }
